# RIFT

./: CMakeLists.txt  Disclaimer.txt  GridSeries.cu  GridSeries.cuh  GridSeriesTest.cpp  License-Simplified-BSD.txt  README.md  config.h  constants.h  grid.cu  grid.h  grid_config.cpp  grid_config.hpp  io.cc  io.h  main.cc  simulator.cu  simulator.h  source.cc  source.h
